--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <body class="HolyGrail">
     <header>…</header>
     <div class="HolyGrail-body">
-        <main class="HolyGrail-content">…</main>
+        <main class="HolyGrail-content">
+            <div class="phrases">
+                <div class="phrase">
+                    Box
+                </div>
+                <div class="phrase">
+                    Box
+                </div>
+                <div class="phrase">
+                    Phrase
+                </div>
+                <div class="phrase">
+                    Phrase
+                </div>
+            </div>
+
+        </main>
         <nav class="HolyGrail-nav">…</nav>
         <aside class="HolyGrail-ads">…</aside>
     </div>
